--- a/src/app/stock-modules/stock/components/stock-form/stock-form.component.html
+++ b/src/app/stock-modules/stock/components/stock-form/stock-form.component.html
@@ -2,25 +2,37 @@
   <h4>{{ data.stock ? 'Editar Almacén' : 'Crear Almacén' }}</h4>
   <mat-divider class="my-4"></mat-divider>
   <form *ngIf="stockForm" [formGroup]="stockForm">
+    <div class="row mb-1">
+      <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Código</mat-label>
       <input matInput formControlName="codigo" maxlength="10" />
       <mat-error *ngIf="codecControl.errors?.required"> {{ 'El código es' }} <strong>requerido</strong> </mat-error>
       <mat-error *ngIf="codecControl.errors?.notAvailable"> {{ 'El código ' }} <strong>ya existe</strong> </mat-error>
     </mat-form-field>
+      </div>
+
+        <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Nombre</mat-label>
       <input matInput formControlName="nombre" maxlength="100" />
       <mat-error *ngIf="nameControl.errors?.required"> {{ 'El nombre es' }} <strong>requerido</strong> </mat-error>
     </mat-form-field>
-    <mat-checkbox  formControlName="activo">Activo</mat-checkbox>
+        </div>
+      </div>
+
+      <div class="row mb-1">
+        <div class="form-group col-md-6">
 
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Dirección</mat-label>
       <input matInput formControlName="direccion" maxlength="100" />
       <!--<mat-error *ngIf="addressControl.errors?.required"> {{ 'La dirección es' }} <strong>requerido</strong> </mat-error>-->
     </mat-form-field>
-    <mat-checkbox   formControlName="punto_de_venta">Punto Venta</mat-checkbox>
+        </div>
+
+          <div class="form-group col-md-6">
+
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Jefe Almacén</mat-label>
       <mat-select #mySelect formControlName="jefe_almacen">
@@ -28,7 +40,22 @@
       </mat-select>
       <mat-error *ngIf="bossstockControl.errors?.required"> {{ 'Seleccione un jefe almacén' }} </mat-error>
     </mat-form-field>
+          </div>
 
+        </div>
+
+        <div class="row mb-1">
+          <div class="form-group col-md-6">
+
+    <mat-checkbox  formControlName="activo">Activo</mat-checkbox>
+          </div>
+            <div class="form-group col-md-6">
+    <mat-checkbox   formControlName="punto_de_venta">Punto Venta</mat-checkbox>
+          </div>
+          </div>
+
+          <div class="row">
+            <div class="form-group col-md-12">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Departamento</mat-label>
       <mat-select #mySelect formControlName="departamento">
@@ -37,7 +64,8 @@
       <mat-error *ngIf="officeControl.errors?.required"> {{ 'Seleccione un departamento' }} </mat-error>
     </mat-form-field>
 
-
+            </div>
+          </div>
 
 
   </form>
