--- a/src/app/stock-modules/boxstock/components/boxstock-form/boxstock-form.component.html
+++ b/src/app/stock-modules/boxstock/components/boxstock-form/boxstock-form.component.html
@@ -2,6 +2,8 @@
   <h4>{{ data.boxstock ? 'Editar Almacen caja' : 'Crear Almacen caja' }}</h4>
   <mat-divider class="my-4"></mat-divider>
   <form *ngIf="boxstockForm" [formGroup]="boxstockForm">
+    <div class="row mb-1">
+      <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Número</mat-label>
       <input matInput formControlName="nro" maxlength="20" />
@@ -9,6 +11,9 @@
       <mat-error *ngIf="numberControl.errors?.maxlength"> {{ 'El número es' }} <strong>no puede tener más de 20 caracteres</strong> </mat-error>
       <mat-error *ngIf="numberControl.errors?.notAvailable"> {{ 'El número ' }} <strong>ya existe</strong> </mat-error>
     </mat-form-field>
+      </div>
+
+        <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Almacén</mat-label>
       <mat-select #mySelect formControlName="almacen">
@@ -16,13 +21,18 @@
       </mat-select>
       <mat-error *ngIf="stockControl.errors?.required"> {{ 'Seleccione un almacén' }} </mat-error>
     </mat-form-field>
-
+        </div>
+    </div>
+    <div class="row">
+      <div class="form-group col-md-12">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Cajero</mat-label>
       <input matInput formControlName="cajero" maxlength="18" />
       <mat-error *ngIf="cashierControl.errors?.required"> {{ 'El cajero es' }} <strong>requerido</strong> </mat-error>
       <mat-error *ngIf="cashierControl.errors?.min || cashierControl.errors?.maxlength || cashierControl.errors?.isNumberInt"> {{ 'El cajero ' }} <strong>soporta solo números positivos de no más 20 cifras</strong> </mat-error>
     </mat-form-field>
+      </div>
+    </div>
   </form>
   <mat-divider class="my-4"></mat-divider>
   <div class="d-flex align-items-center justify-content-end">
