--- a/src/app/stock-modules/pricechanges/components/pricechanges-form/pricechanges-form.component.html
+++ b/src/app/stock-modules/pricechanges/components/pricechanges-form/pricechanges-form.component.html
@@ -2,6 +2,8 @@
   <h4>{{ data.pricechanges ? 'Editar Cambio Precio' : 'Crear Cambio Precio' }}</h4>
   <mat-divider class="my-4"></mat-divider>
   <form *ngIf="pricechangesForm" [formGroup]="pricechangesForm">
+    <div class="row mb-1">
+      <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Fecha:</mat-label>
       <!--<input matInput formControlName="fecha" />-->
@@ -10,7 +12,9 @@
       <mat-datepicker #picker></mat-datepicker>
       <mat-error *ngIf="dateControl.errors?.required"> {{ 'La fecha es' }} <strong>requerido</strong>  </mat-error>
    </mat-form-field>
+      </div>
 
+        <div class="form-group col-md-6">
     <mat-form-field appearance="fill">
       <mat-label i18n="Timepicker 1 Title">Hora</mat-label>
       <input matTimepicker #t1="matTimepicker" i18n-okLabel="Timepicker 1 Ok Label" okLabel="Ok"
@@ -20,27 +24,42 @@
       <mat-error *ngIf="timeControl.errors?.required"> {{ 'La hora es' }} <strong>requerido</strong>  </mat-error>
       <!--<mat-error *ngIf="time1.touched && time1.invalid">Invalid Date</mat-error>-->
     </mat-form-field>
+        </div>
+    </div>
 
+    <div class="row mb-1">
+      <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Precio Viejo:</mat-label>
       <input matInput formControlName="precio_viejo" maxlength="20"/>
       <mat-error *ngIf="oldpriceControl.errors?.required"> {{ 'El precio viejo es' }} <strong>requerido</strong>  </mat-error>
       <mat-error *ngIf="oldpriceControl.errors?.isDecimalFijo172"> {{ 'El precio viejo es numérico' }} <strong> la parte entera de 15 números y la decimal de 4 números</strong>  </mat-error>
-
     </mat-form-field>
+      </div>
+
+
+        <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Precio Nuevo:</mat-label>
       <input matInput formControlName="precio_nuevo" maxlength="20"/>
       <mat-error *ngIf="newpriceControl.errors?.required"> {{ 'El precio nuevo es' }} <strong>requerido</strong>  </mat-error>
       <mat-error *ngIf="newpriceControl.errors?.isDecimalFijo172"> {{ 'El precio nuevo es numérico' }} <strong> la parte entera de 15 números y la decimal de 4 números</strong>  </mat-error>
     </mat-form-field>
+        </div>
+    </div>
+
+    <div class="row mb-1">
+      <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Comentario</mat-label>
       <input matInput formControlName="comentario" maxlength="255"/>
       <!--<mat-error *ngIf="comentaryControl.errors?.required"> {{ 'El comentario es' }} <strong>requerido</strong>  </mat-error>-->
     </mat-form-field>
-  <!-- user -->
-  <div class="mb-4">
+      </div>
+
+
+        <div class="form-group col-md-6">
+
     <ng-select
       appearance="outline"
       class="custom w-100"
@@ -53,8 +72,10 @@
     <small class="text-danger error-style" *ngIf="userControl.errors?.required && userControl.dirty">
       El campo usuario es <strong>requerido</strong></small>
   </div>
+    </div>
    <!-- Almacen -->
-   <div class="mb-4">
+    <div class="row">
+      <div class="form-group col-md-12">
     <ng-select
       appearance="outline"
       class="custom w-100"
@@ -67,6 +88,7 @@
     <small class="text-danger error-style" *ngIf="loteControl.errors?.required && loteControl.dirty">
       El campo lote es <strong>requerido</strong></small>
   </div>
+    </div>
   </form>
   <mat-divider class="my-4"></mat-divider>
   <div class="d-flex align-items-center justify-content-end">
