--- a/src/app/stock-modules/productstock/components/productstock-form/productstock-form.component.html
+++ b/src/app/stock-modules/productstock/components/productstock-form/productstock-form.component.html
@@ -2,22 +2,30 @@
   <h4>{{ data.productstock ? 'Editar Almacen Producto' : 'Crear Almacen Producto' }}</h4>
   <mat-divider class="my-4"></mat-divider>
   <form *ngIf="productstockForm" [formGroup]="productstockForm">
+    <div class="row mb-1">
+      <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
-      <strong> {{ existo }} </strong>
       <mat-label>Código</mat-label>
       <input matInput formControlName="codigo" maxlength="10" />
       <mat-error *ngIf="codecControl.errors?.required"> {{ 'El código es' }} <strong>requerido</strong> </mat-error>
       <mat-error *ngIf="codecControl.errors?.notAvailable"> {{ 'El número ' }} <strong>ya existe</strong> </mat-error>
     </mat-form-field>
-
+      </div>
+        <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Descripción</mat-label>
       <input matInput formControlName="descripcion" maxlength="50" />
       <mat-error *ngIf="descriptionControl.errors?.required"> {{ 'La descripción es' }} <strong>requerido</strong> </mat-error>
     </mat-form-field>
+        </div>
+      </div>
 
+    <div class="row mb-1">
+      <div class="form-group col-md-6">
     <mat-checkbox checked="false" formControlName="activo">Activo</mat-checkbox>
+      </div>
 
+        <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Unidad Medida</mat-label>
       <mat-select #mySelect formControlName="unidad_medida">
@@ -25,6 +33,11 @@
       </mat-select>
       <mat-error *ngIf="measureControl.errors?.required"> {{ 'Seleccione una Unidad Medida' }} </mat-error>
     </mat-form-field>
+        </div>
+      </div>
+
+    <div class="row mb-1">
+      <div class="form-group col-md-6">
 
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Familia</mat-label>
@@ -33,7 +46,10 @@
       </mat-select>
       <mat-error *ngIf="familyControl.errors?.required"> {{ 'Seleccione una familia' }} </mat-error>
     </mat-form-field>
+      </div>
 
+
+        <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Impuesto</mat-label>
       <mat-select #mySelect formControlName="impuesto">
@@ -41,7 +57,11 @@
       </mat-select>
       <mat-error *ngIf="taxControl.errors?.required"> {{ 'Seleccione un impuesto' }} </mat-error>
     </mat-form-field>
-    
+        </div>
+    </div>
+
+    <div class="row mb-1">
+      <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Programa</mat-label>
       <mat-select #mySelect formControlName="programa">
@@ -49,7 +69,9 @@
       </mat-select>
       <mat-error *ngIf="programControl.errors?.required"> {{ 'Seleccione un programa' }} </mat-error>
     </mat-form-field>
+      </div>
 
+        <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Atributos</mat-label>
       <mat-select #mySelect formControlName="atributos" multiple>
@@ -57,7 +79,8 @@
       </mat-select>
       <mat-error *ngIf="attributeControl.errors?.required"> {{ 'Seleccione un atributo' }} </mat-error>
     </mat-form-field>
-
+        </div>
+    </div>
     
   </form>
   <mat-divider class="my-4"></mat-divider>
