--- a/src/app/stock-modules/servicesstock/components/servicesstock-form/servicesstock-form.component.html
+++ b/src/app/stock-modules/servicesstock/components/servicesstock-form/servicesstock-form.component.html
@@ -2,25 +2,34 @@
   <h4>{{ data.servicesstock ? 'Editar Servicio Almacen' : 'Crear Servicio Almacen' }}</h4>
   <mat-divider class="my-4"></mat-divider>
   <form *ngIf="servicesstockForm" [formGroup]="servicesstockForm">
+    <div class="row mb-1">
+      <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Código</mat-label>
       <input matInput formControlName="codigo" maxlength="50" />
       <mat-error *ngIf="codecControl.errors?.required"> {{ 'El código es' }} <strong>requerido</strong> </mat-error>
     </mat-form-field>
-
+      </div>
+        <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Nombre</mat-label>
       <input matInput formControlName="nombre" maxlength="20" />
       <mat-error *ngIf="nameControl.errors?.required"> {{ 'El nombre es' }} <strong>requerido</strong> </mat-error>
     </mat-form-field>
+        </div>
+      </div>
 
+    <div class="row mb-1">
+      <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Precio</mat-label>
       <input matInput formControlName="precio" maxlength="20" />
       <mat-error *ngIf="priceControl.errors?.required"> {{ 'El precio es' }} <strong>requerido</strong> </mat-error>
       <mat-error *ngIf="priceControl.errors?.isDecimal"> {{ 'El precio es' }} <strong>solo números enteros o decimales</strong> </mat-error>
     </mat-form-field>
+      </div>
 
+        <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Impuesto</mat-label>
       <mat-select #mySelect formControlName="impuesto">
@@ -28,7 +37,11 @@
       </mat-select>
       <mat-error *ngIf="taxControl.errors?.required"> {{ 'Seleccione un impuesto' }} </mat-error>
     </mat-form-field>
+        </div>
+    </div>
 
+    <div class="row mb-1">
+      <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Usuario</mat-label>
       <mat-select #mySelect formControlName="usuario">
@@ -36,7 +49,8 @@
       </mat-select>
       <mat-error *ngIf="userControl.errors?.required"> {{ 'Seleccione un usuario' }} </mat-error>
     </mat-form-field>
-
+        </div>
+          <div class="form-group col-md-6">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Departamento</mat-label>
       <mat-select #mySelect formControlName="departamento" multiple>
@@ -44,6 +58,8 @@
       </mat-select>
       <mat-error *ngIf="officeControl.errors?.required"> {{ 'Seleccione un departamento' }} </mat-error>
     </mat-form-field>
+          </div>
+    </div>
 
   </form>
   <mat-divider class="my-4"></mat-divider>
