--- a/src/app/stock-modules/warehouse-movement-detail/components/warehouse-movement-detail-form/warehouse-movement-detail-form.component.html
+++ b/src/app/stock-modules/warehouse-movement-detail/components/warehouse-movement-detail-form/warehouse-movement-detail-form.component.html
@@ -2,6 +2,7 @@
     <h4>{{ data.warehouseMovementDetail ? 'Editar Detalle Movimiento' : 'Crear Detalle Movimiento' }}</h4>
     <mat-divider class="my-4"></mat-divider>
     <form *ngIf="WarehouseMovementDetailForm" [formGroup]="WarehouseMovementDetailForm">
+      <!--<small> {{ notSubmit }}</small>-->
       <div class="row mb-1">
         <div class="form-group col-md-6">
             <label class="border border-success">Importe: {{ amount}}</label>
