--- a/src/app/clinical-services/system-exam/components/system-exam-form/system-exam-form.component.html
+++ b/src/app/clinical-services/system-exam/components/system-exam-form/system-exam-form.component.html
@@ -1,34 +1,43 @@
 <div class="form">
-  <h4>{{ data.subcategory ? 'Editar Subcategoría' : 'Crear Subcategoría' }}</h4>
+  <h4>{{ data.systemExam ? 'Editar Examen Sistema' : 'Crear Examen Sistema' }}</h4>
   <mat-divider class="my-4"></mat-divider>
-  <form *ngIf="subcategoryForm" [formGroup]="subcategoryForm">
+  <form *ngIf="systemExamForm" [formGroup]="systemExamForm">
+    <div class="row">
+    <div class="col-lg-8 col-md-12">
     <mat-form-field class="w-100" appearance="outline">
-      <mat-label>Descricpión:</mat-label>
-      <input matInput formControlName="descripcion" />
-      <mat-error *ngIf="this.nameSubcategoryControl.errors?.required"> {{ 'La descripción es' }} <strong>requerido</strong> </mat-error>
-      <mat-error *ngIf="this.nameSubcategoryControl.errors?.pattern"> {{ 'La descripción solo permite letras y espacios' }}  </mat-error>
+      <mat-label>Observación:</mat-label>
+      <input matInput formControlName="observacion" />
+      <mat-error *ngIf="this.nameSystemExamControl.errors?.required"> {{ 'La Observación es' }} <strong>requerido</strong> </mat-error>
+      <mat-error *ngIf="this.nameSystemExamControl.errors?.pattern"> {{ 'La Observación solo permite letras y espacios' }}  </mat-error>
     </mat-form-field>
-    <div class="mb-4">
-      <ng-select
-        appearance="outline"
-        class="custom w-100"
-        placeholder="Categoria"
-        [items]="category"
-        bindLabel="descripcion"
-        bindValue="id"
-        formControlName="categoria"
-      >
-      </ng-select>
-      <small class="text-danger error-style" *ngIf="subcategoryForm.controls['categoria'].errors?.required && subcategoryForm.controls['categoria'].dirty"
-        >El campo categoría es <strong>requerido</strong></small
-      >
     </div>
+    <div class="col-lg-6 col-md-12">
+      <!-- Examen Físico -->
+      <mat-form-field class="w-100" appearance="outline">
+       <mat-label>Examen Físico</mat-label>
+       <mat-select #mySelect formControlName="examen_fisico">
+         <mat-option *ngFor="let exam of fisicExam" [value]="exam.id">{{ exam.impresion_general }}</mat-option>
+       </mat-select>
+       <mat-error *ngIf="fisicExamControl.errors?.required"> {{ 'Seleccione un examen físico' }} </mat-error>
+     </mat-form-field>
+   </div>
+   <div class="col-lg-6 col-md-12">
+    <!-- Sistema -->
+    <mat-form-field class="w-100" appearance="outline">
+     <mat-label>Sistema</mat-label>
+     <mat-select #mySelect formControlName="sistema">
+       <mat-option *ngFor="let sys of system" [value]="sys.id">{{ sys.descripcion }}</mat-option>
+     </mat-select>
+     <mat-error *ngIf="systemControl.errors?.required"> {{ 'Seleccione un sistema' }} </mat-error>
+   </mat-form-field>
+ </div>
+ </div>
   </form>
   <mat-divider class="my-4"></mat-divider>
   <div class="d-flex align-items-center justify-content-end">
     <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
-    <button (click)="onSubmit(subcategoryForm.value)" [disabled]="!subcategoryForm.valid" mat-raised-button color="primary" class="button">
-      {{ data.subcategory ? 'Aceptar' : 'Crear' }}
+    <button (click)="onSubmit(systemExamForm.value)" [disabled]="!systemExamForm.valid" mat-raised-button color="primary" class="button">
+      {{ data.systemExam ? 'Aceptar' : 'Crear' }}
     </button>
   </div>
 </div>
