--- a/src/app/stock-modules/warehouse-movement-detail/pages/warehouse-movement-detail-page/warehouse-movement-detail-page.component.html
+++ b/src/app/stock-modules/warehouse-movement-detail/pages/warehouse-movement-detail-page/warehouse-movement-detail-page.component.html
@@ -10,7 +10,7 @@
     [displayedColumns]="configuration.displayedColumns"
     [columnsName]="configuration.columnsName"
     [paginationSize]="configuration.paginationSize"
-    [filters]="configuration.tableFilters"
+    [filters]="displayHeader ? configuration.tableFilters : []"
     [rowActionButtons]="rowActionButtons"
     [loading]="loading"
     (changePage)="onChangePage($event)"
